# PHYLOAD

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
configs/: main.yaml  main_multi.yaml
configs/.ipynb_checkpoints/: main-checkpoint.yaml  main_multi-checkpoint.yaml
notebooks/: data_loading_demo.ipynb
notebooks/.ipynb_checkpoints/: data_loading_demo-checkpoint.ipynb  multi_dataset_demo-checkpoint.ipynb
src/phyload/: __init__.py  datasets.py  loaders.py  multi.py
src/phyload.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/phyload/.ipynb_checkpoints/: datasets-checkpoint.py  loaders-checkpoint.py
